fixed twitter overlapping and added padded box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,3 +18,10 @@ div.ui.divbg.container {
     padding-bottom: 3rem;
 }
 
+    background-color:white;
+    padding-top:1em;
+}
+
+.twitter iframe {
+    min-width:0px!important;
+}
